Fix sidebar UI issues due to FA5 upgrade
Part of request #17110 Update to Font Awesome 5

* TLP icons aren't blurry anymore
* Project privacy and banner icons are centered
* Icons are centered when the sidebar is collapsed

--- a/src/themes/FlamingParrot/css/utils/_post-definitions.scss
+++ b/src/themes/FlamingParrot/css/utils/_post-definitions.scss
@@ -59,8 +59,14 @@
             }
 
             li a {
+                justify-content: center;
                 width: $sidebar-width-collapsed;
-                font-size: 18px;
+                padding: 0 3px 0 0;
+
+                > .project-sidebar-nav-item-icon {
+                    margin: 0;
+                    font-size: 1rem;
+                }
 
                 > span {
                     display: none;
